--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1478,6 +1478,10 @@ select {
   gap: 2rem;
 }
 
+.gap-0 {
+  gap: 0px;
+}
+
 .gap-x-10 {
   -moz-column-gap: 2.5rem;
        column-gap: 2.5rem;
@@ -3683,6 +3687,10 @@ $arrow-color: #fff;
 
   .md\:gap-0 {
     gap: 0px;
+  }
+
+  .md\:gap-4 {
+    gap: 1rem;
   }
 
   .md\:bg-transparent {
