--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1116,6 +1116,14 @@ select {
   height: 0.25rem;
 }
 
+.h-1\/4 {
+  height: 25%;
+}
+
+.h-2\/3 {
+  height: 66.666667%;
+}
+
 .max-h-36 {
   max-height: 9rem;
 }
@@ -1132,6 +1140,20 @@ select {
 
 .max-h-screen {
   max-height: 100vh;
+}
+
+.max-h-3\.5 {
+  max-height: 0.875rem;
+}
+
+.max-h-3 {
+  max-height: 0.75rem;
+}
+
+.min-h-min {
+  min-height: -webkit-min-content;
+  min-height: -moz-min-content;
+  min-height: min-content;
 }
 
 .w-full {
@@ -2221,6 +2243,10 @@ select {
 
 .pt-10 {
   padding-top: 2.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-left {
